# Basic-Chess-Game

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  LICENSE  README.md  bishop.h  board.h  king.h  knight.h  main.cpp  pawn.h  piece.h  pieces.cpp  player.cpp  player.h  queen.h  rook.h
Board/: Board.cpp  Board.h
Game/: Game.cpp  Game.h
Pieces/: Piece.cpp  Piece.h
Pieces/Bishop/: Bishop.cpp  Bishop.h
Pieces/King/: King.cpp  King.h
Pieces/Knight/: Knight.cpp  Knight.h
Pieces/Pawn/: Pawn.cpp  Pawn.h
Pieces/Queen/: Queen.cpp  Queen.h
Pieces/Rook/: Rook.cpp  Rook.h
Player/: Player.cpp  Player.h
